[package]
name = "DNP3Attacks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dnp3 = "1.6.0"
anyhow = "1.0.98"
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation"
] }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5.40", features = ["derive"] }